--- a/Morpion JS/css/style.css
+++ b/Morpion JS/css/style.css
@@ -6,8 +6,7 @@
 }
 
 .board{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     justify-content: center;
 }
 
@@ -17,7 +16,25 @@
     background-color: beige;
     border: 1px solid;
     cursor: pointer;
+    margin: 5px;
 }
+
+#box1{
+    grid-row: 1 / 3;
+    grid-column: 1;
+}
+
+#box2{
+    grid-row: 1 / 3;
+    grid-column: 2;
+}
+
+#box3{
+    grid-row: 1/ 3;
+    grid-column: 3;
+}
+
+
 
 .popUpPseudo{
     width: 40%;
@@ -34,5 +51,17 @@
 
 #popUpPseudoButton {
     text-transform: uppercase;
+}
+
+.clicked-X{
+    background-image: url(../img/x.png);
+    cursor: not-allowed;
+    background-repeat: no-repeat;
+}
+
+.clicked-O{
+    background-image: url(../img/letter-o.png);
+    cursor: not-allowed;
+    background-repeat: no-repeat;
 }
 
